# giraff-ros2

./: .gitmodules  README.md
astra_camera/astra_camera/include/astra_camera/: DefineImageType.hpp  ob_camera_node.h
astra_camera/astra_camera/include/astra_camera/point_cloud_proc/: point_cloud_xyz.h  point_cloud_xyzrgb.h
astra_camera/astra_camera/launch/: astra.launch.py  multi_astra.launch.py
astra_camera/astra_camera/params/: astra_params.yaml
astra_camera/astra_camera/src/: ob_camera_node.cpp  ob_camera_node_factory.cpp
astra_camera/astra_camera/src/point_cloud_proc/: point_cloud_xyz.cpp  point_cloud_xyzrgb.cpp
giraff_interfaces/: CMakeLists.txt  README.md  package.xml
giraff_interfaces/msg/: AvrComms.msg  Batteries.msg  CmdVelAvr.msg  Pilot.msg  Stalk.msg  StalkRef.msg
giraff_interfaces/srv/: GiraffSrvMsg.srv
giraff_ros2_driver/: CMakeLists.txt  package.xml  readme.md
giraff_ros2_driver/include/giraff_ros2_driver/: giraff_manager.h  giraff_serial.h
giraff_ros2_driver/launch/: giraff_launch.py
giraff_ros2_driver/scripts/: 50-fish_eye_webcam.rules  50-hokuyo.rules  50-rfid.rules  install.sh
giraff_ros2_driver/src/: giraff_node.cpp
hokuyo/urg_c/current/include/urg_c/: urg_connection.h  urg_debug.h  urg_detect_os.h  urg_errno.h  urg_ring_buffer.h  urg_sensor.h  urg_serial.h  urg_serial_utils.h  urg_tcpclient.h  urg_time.h  urg_utils.h
hokuyo/urg_c/current/samples/: open_urg_sensor.h
hokuyo/urg_node/include/urg_node/: urg_c_wrapper.hpp  urg_node.hpp
hokuyo/urg_node/launch/: urg_node_ethernet.yaml  urg_node_launch.py  urg_node_serial.yaml
hokuyo/urg_node/src/: get_id.cpp  urg_c_wrapper.cpp  urg_node.cpp
missions/: .gitignore  CMakeLists.txt  README.md  package.xml
missions/launch/giraff/: giraff_launch.py  giraff_params.yaml  nav2_launch.py  nav2_launch_old.py  nav2_params_old.yaml  pointcloud_to_laserscan_launch.py
missions/launch/task/: nav2_slam_launch.py  nav2_slam_params.yaml  navigation_launch.py  rviz_launch.py  slam_launch.py  slam_params.yaml
missions/maps/: aislab.pgm  aislab.yaml  mapirlab.pgm  mapirlab.yaml  mapirlab2023.pgm  mapirlab2023.yaml  mapirlab_april_23.pgm  mapirlab_april_23.yaml  mapirlab_corridor.pgm  mapirlab_corridor.yaml  parking.pgm  parking.yaml
missions/params/: giraff.xacro  giraff_old.xacro  giraff_params.yaml  nav2_params.yaml  navigation_params.yaml  slam_params.yaml
missions/params/udev_rules/: 50-patrolbot_base.rules  50-sickLMS200.rules  readme.md
missions/rviz/: coppelia_sim.rviz  giraff.rviz  hunter_astra_cam.rviz  hunter_usb_cam.rviz  rhodon.rviz
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
